src/main/java/com/example/event/error/EventLocationException.java
package com.example.event.error;

public class EventLocationException extends Exception{
    public EventLocationException(String message) {
        super(message);
    }
}
